examples/test/testpolicy9700.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9700
  namespace: namespace460
spec:
  podSelector:
    matchLabels:
      key12: value19
      key25: value26
      key36: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value38
          key24: value39
      podSelector:
        matchLabels:
          key11: value0
          key48: value6
          key26: value17
